# beancount-import

./: .gitignore  Cargo.toml
plaid/: Cargo.toml
plaid/src/: args.rs  cli.rs  export.rs  main.rs
plaid/src/db/: access_token.rs  database.rs  file.rs  mod.rs  plaid_auth.rs  transactions.rs  versioned.rs
plaid/src/plaid_api/: client.rs  mod.rs  test_connection.rs  transactions.rs
plaid/src/plaid_api/categories/: mod.rs  plaid_categories.csv
plaid/src/plaid_api/link_account/: link_http_server.rs  tokens.rs
plaid/src/terminal/: mod.rs  prompt.rs
src/: args.rs  cli.rs  export.rs  lib.rs  main.rs  terminal.rs
src/db/: access_token.rs  account.rs  bank_connection.rs  crypto.rs  database.rs  file.rs  mod.rs  plaid_auth.rs  transactions.rs
src/link_http_server/: mod.rs
src/plaid_api/: access_token.rs  accounts.rs  client.rs  mod.rs  transactions.rs
src/plaid_api/link_account/: link_flow.rs  link_http_server.rs  mod.rs
src/terminal/: bullet_points.rs  mod.rs  prompt.rs
wave/: Cargo.toml
wave/src/: args.rs  config.rs  export.rs  ir.rs  lib.rs  main.rs  operations.rs
wave/src/import/: mod.rs
wave/src/import/parser/: account.rs  header.rs  mod.rs
wave/src/import/parser/utils/: amount.rs  csv.rs  date.rs  line.rs  mod.rs  testutils.rs
wave/src/wave_ledger/: mod.rs
wave/src/wave_ledger/parser/: account.rs  header.rs  mod.rs
wave/src/wave_ledger/parser/utils/: amount.rs  csv.rs
wave/src/wave_ledger_file/: mod.rs
wave/src/wave_ledger_file/parser/: account.rs  mod.rs
wave/src/wave_ledger_file/parser/utils/: line.rs  mod.rs
