[package]
edition = "2021"
name = "beancount-plaid"
version = "0.1.0"

[dependencies]
anyhow = "1.0.93"
chacha20poly1305 = {version = "0.10.1", features = ["std"]}
chrono = "0.4.38"
crc = "3.2.1"
env_logger = "0.11.5"
log = "0.4.22"
open = "5.3.1"
plaid = "8.0.0"
postcard = {version = "1.0.10", features = ["use-std", "use-crc"]}
rocket = "0.5.1"
serde = "1.0.215"
tokio = "1.41.1"
rand = "0.8.5"
dialoguer = "0.11.0"
httpclient = "0.21.3"
clap = {version ="4.5.21", features = ["derive"]}
console = "0.15.8"
rust_decimal = "1.36.0"
common_macros = "0.1.1"
zstd = "0.13.2"
beancount-core = {git = "https://github.com/smessmer/beancount", version = "0.2.0", features = ["chrono"]}
beancount-render = {git = "https://github.com/smessmer/beancount", version = "0.1.0"}
serde_json = "1.0.133"
indicatif = "0.17.9"
futures = "0.3.31"
csv = "1.3.1"

[dev-dependencies]
hex = "0.4.3"
tempfile = "3.14.0"
